--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
   "name": "curso-nextjs",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "test": "jest"
   },
   "dependencies": {
-    "@prismicio/client": "^5.1.0",
-    "date-fns": "^2.28.0",
-    "next": "12.0.7",
-    "prismic-dom": "^2.2.6",
+    "@prismicio/client": "^5.0.0",
+    "date-fns": "^2.22.1",
+    "next": "10.2.3",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.45.1"
+    "sass": "^1.34.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.11.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@types/node": "^17.0.5",
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@types/node": "^15.6.1",
     "@types/prismic-dom": "^2.1.1",
-    "@types/react": "^17.0.38",
-    "babel-jest": "^27.4.5",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
+    "@types/react": "^17.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "babel-jest": "^27.0.2",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.5",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "jest": "^27.0.4",
+    "jest-dom": "^4.0.0",
+    "prettier": "2.3.0",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.2.4"
   }
 }
